# flex-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.bat  implementation.md
examples/: test_chan_debug.fx  test_float_simple.fx  test_fn_direct.fx  test_fn_direct2.fx  test_fn_exists.fx  test_fn_order.fx  test_fn_parse.fx  test_fn_ptr.fx  test_fn_ptr_addr.fx  test_fn_ptr_clean.fx  test_fn_ptr_clean2.fx  test_fn_ptr_clean3.fx  test_fn_ptr_clean4.fx  test_fn_ptr_clean5.fx  test_fn_ptr_debug.fx  test_fn_ptr_debug2.fx  test_fn_ptr_min.fx  test_fn_ptr_mut.fx  test_fn_ptr_notype.fx  test_fn_ptr_simple.fx  test_fn_ptr_store.fx  test_fn_ptr_workaround.fx  test_for_O2.fx  test_inclusive_range.fx  test_jump_thread_simple.tyl  test_mut_debug.fx  test_two_fns.fx
src/: main.cpp
src/backend/bytecode/: bytecode.h  bytecode_base.h  compiler.h  compiler_core.cpp  compiler_decl.cpp  compiler_expr.cpp  compiler_stmt.cpp
src/backend/codegen/: codegen_base.h  codegen_builtins.cpp  codegen_call.cpp  codegen_core.cpp  codegen_decl.cpp  codegen_expr.cpp  codegen_ffi.cpp  codegen_gc.cpp  codegen_stmt.cpp  codegen_traits.cpp  global_register_allocator.cpp  global_register_allocator.h  native_codegen.h  register_allocator.cpp  register_allocator.h  vectorizer.cpp  vectorizer.h
src/backend/codegen/call/: codegen_call_builtins.cpp  codegen_call_builtins_conv.cpp  codegen_call_builtins_gc.cpp  codegen_call_builtins_io.cpp  codegen_call_builtins_list.cpp  codegen_call_builtins_list_ext.cpp  codegen_call_builtins_math.cpp  codegen_call_builtins_math_ext.cpp  codegen_call_builtins_memory.cpp  codegen_call_builtins_result.cpp  codegen_call_builtins_string.cpp  codegen_call_builtins_string_ext.cpp  codegen_call_builtins_system.cpp  codegen_call_builtins_system_ext.cpp  codegen_call_builtins_time_ext.cpp  codegen_call_core.cpp  codegen_call_dispatch.cpp
src/backend/codegen/core/: codegen_compile.cpp  codegen_const_eval.cpp  codegen_helpers.cpp  codegen_print.cpp  codegen_record_layout.cpp  codegen_type_utils.cpp
src/backend/codegen/decl/: codegen_decl_fn.cpp  codegen_decl_program.cpp  codegen_decl_types.cpp
src/backend/codegen/expr/: codegen_expr_assign.cpp  codegen_expr_async.cpp  codegen_expr_binary.cpp  codegen_expr_channel.cpp  codegen_expr_collections.cpp  codegen_expr_index.cpp  codegen_expr_lambda.cpp  codegen_expr_list.cpp  codegen_expr_literals.cpp  codegen_expr_misc.cpp  codegen_expr_pointer.cpp  codegen_expr_record.cpp  codegen_expr_sync.cpp
src/backend/codegen/stmt/: codegen_stmt_assign.cpp  codegen_stmt_control.cpp  codegen_stmt_misc.cpp  codegen_stmt_vardecl.cpp  codegen_stmt_vars.cpp
src/backend/gc/: allocator.cpp  allocator.h  gc.cpp  gc.h  gc_runtime.h
src/backend/linker/: linker.h  linker_base.h  linker_core.cpp  linker_layout.cpp  linker_output.cpp  linker_symbols.cpp
src/backend/object/: object_file.cpp  object_file.h
src/backend/runtime/: value.h
src/backend/vm/: vm.h  vm_base.h  vm_builtins.cpp  vm_core.cpp  vm_execute.cpp
src/backend/x64/: pe_generator.cpp  pe_generator.h  peephole.cpp  peephole.h  x64_asm_callee_saved.cpp  x64_asm_core.cpp  x64_asm_sse.cpp  x64_assembler.cpp  x64_assembler.h
src/cli/: ast_printer.cpp  ast_printer.h
src/common/: common.h  diagnostics.h  errors.h  platform.h  types.h
src/frontend/ast/: ast.cpp  ast.h
src/frontend/lexer/: lexer.h  lexer_base.h  lexer_core.cpp  lexer_scan.cpp
src/frontend/macro/: syntax_macro.cpp  syntax_macro.h
src/frontend/parser/: parser_base.h  parser_core.cpp  parser_decl_macros.cpp  parser_decl_modules.cpp  parser_decl_traits.cpp  parser_decl_types.cpp  parser_declarations.cpp  parser_expr_infix.cpp  parser_expr_pratt.cpp  parser_expr_primary.cpp  parser_expressions.cpp  parser_statements.cpp  parser_types.cpp
src/frontend/token/: token.h
src/semantic/checker/: checker_base.h  checker_core.cpp  checker_decl.cpp  checker_expr.cpp  checker_stmt.cpp  type_checker.h
src/semantic/expander/: expander_base.h  expander_clone.cpp  expander_core.cpp  expander_expand.cpp  macro_expander.h
src/semantic/generics/: ast_cloner.cpp  ast_cloner.h  monomorphizer.cpp  monomorphizer.h
src/semantic/module/: module_system.cpp  module_system.h
src/semantic/optimizer/: algebraic.cpp  algebraic.h  constant_folding.cpp  constant_folding.h  constant_propagation.cpp  constant_propagation.h  cse.cpp  cse.h  ctfe.cpp  ctfe.h  dead_code.cpp  dead_code.h  gvn.cpp  gvn.h  inlining.cpp  inlining.h  instruction_scheduler.cpp  instruction_scheduler.h  loop_optimizer.cpp  loop_optimizer.h  optimizer.cpp  optimizer.h  pgo.cpp  pgo.h  ssa.cpp  ssa.h  tail_call.cpp  tail_call.h
src/semantic/optimizer/loop/: indvar_simplify.cpp  loop_rotation.cpp
src/semantic/symbols/: symbol_table.cpp  symbol_table.h
src/semantic/types/: types.cpp  types.h
src/stdlib/: flex_stdlib.h  stdlib_core.cpp
src/stdlib/io/: io.cpp
src/stdlib/json/: json.cpp
src/stdlib/list/: list.cpp
src/stdlib/map/: map.cpp
src/stdlib/math/: math.cpp
src/stdlib/string/: string.cpp
src/stdlib/system/: system.cpp
src/stdlib/time/: time.cpp
